--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.DS_Store
-/build
+Android/.DS_Store
+Android/build
 /captures
 .externalNativeBuild
 .cxx
