--- a/api/.env.dev
+++ b/api/.env.dev
@@ -7,3 +7,8 @@ TOKEN_KEY=
 DISCORD_WEBHOOK_URL=
 DISCORD_METION_ROLE_ID=
 LOG_LEVEL=
+R2_ACCESS_KEY=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET_NAME=
+R2_ENDPOINT_URL=
+R2_REGION=
